# qmu

./: README.md  pyproject.toml
skills/qmu/: SKILL.md
skills/qmu-linux-kbuild/: SKILL.md
skills/qmu-linux-rootfs/: SKILL.md
src/qmu/: _cliutil.py  cli.py  config.py  instance.py  output.py  paths.py  qemu.py  qmp.py  rootfs.py  runtime.py  serial.py  snapshot.py  ssh.py  vm.py
src/qmu/commands/: guest.py  lifecycle.py  meta.py  qmp_cmds.py
tests/: .gitignore  README.md  conftest.py  live-transcript.md  test_argparse.py  test_build_qemu_command.py  test_cli_config_errors.py  test_cli_crash.py  test_cli_crash_command.py  test_cli_crash_path.py  test_config.py  test_config_init.py  test_doctor.py  test_exit_codes.py  test_gdb.py  test_guest_state.py  test_instance_atomic.py  test_instance_migration.py  test_instance_prune.py  test_instance_recycling.py  test_json_contract.py  test_kbase.py  test_kbuild.py  test_launch_arch.py  test_launch_preflight.py  test_launch_transaction.py  test_log_contract.py  test_mkrootfs_script.py  test_output.py  test_paths.py  test_qemu_capabilities.py  test_qmp_events.py  test_qmp_execute.py  test_rootfs_cli.py  test_runtime_prune.py  test_serial.py  test_snapshot.py  test_snapshot_exit.py  test_snapshot_guidance.py  test_snapshot_provenance.py  (+4 more)
tests/assets/: .gitignore  build.sh
tests/exploit-samples/: hello.c
tools/: kbuild.sh  mkrootfs.sh
