[project]
name = "qmu"
version = "0.1.0"
description = "Agent-friendly QEMU VM management CLI for kernel research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
qmu = "qmu.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
# The vendored kernel tree under tests/assets/ ships its own test_*.py files;
# do NOT collect them as part of the qmu suite.
addopts = "--ignore=tests/assets"
norecursedirs = ["tests/assets", "tests/eval-report"]
